# YadroTatlin

./: CMakeLists.txt  README.md  config.json  main.cpp
include/: SortingAlgorithm.h  Tape.h
src/: Sort.cpp  Tape.cpp
test/: CMakeLists.txt  test.cpp
utils/: generate.c  read_bin.c
